upgrade grails version to 2.5.5

--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
 #Grails Metadata file
-#Wed Apr 20 06:25:32 IST 2016
-app.grails.version=2.5.0
+#Wed Jul 04 23:35:31 BST 2018
+app.grails.version=2.5.5
 app.name=i18n-demo
+app.servlet.version=3.0
 app.version=0.1
